#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([throwerd], [0.0.0], [i.a.pogudin@gmail.com])
AM_INIT_AUTOMAKE([1.9 foreign])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_PROG_RANLIB

PKG_CHECK_MODULES([CHECK], [check >= 0.9.4])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/utils/Makefile
                 tests/Makefile
                 tests/utils/Makefile])
AC_OUTPUT
