#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([throwerd], [0.0.0], [i.a.pogudin@gmail.com])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([1.9 foreign])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
