noinst_LIBRARIES = libutils.a

AM_CFLAGS = -I$(top_srcdir)/include

libutils_a_SOURCES = \
  $(top_srcdir)/include/commons.h \
  strings.c $(top_srcdir)/include/strings.h \
  errors.c $(top_srcdir)/include/errors.h \
  platform.c $(top_srcdir)/include/platform.h \
  collections.c $(top_srcdir)/include/collections.h \
  log.c $(top_srcdir)/include/log.h